infra/k8s/frontdoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontdoor
spec:
  selector:
    app.kubernetes.io/name: frontdoor
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
